--- a/index.html
+++ b/index.html
@@ -74,49 +74,49 @@
         </ul>
         <div class="section__cards">
             <div class="card">
-                <img src="./img/burger.png" alt="">
+                <a href="#" class="card__img"><img src="./img/burger.png" alt=""></a>
                 <h3 class="card__h">Мясная лагуна</h3>
                 <p class="card__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet
                     luctus venenatis, lectus magna fringilla urna, porttitor</p>
             </div>
             <div class="card">
-                <img src="./img/burger.png" alt="">
+                <a href="#" class="card__img"><img src="./img/burger.png" alt=""></a>
                 <h3 class="card__h">Мясная лагуна</h3>
                 <p class="card__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet
                     luctus venenatis, lectus magna fringilla urna, porttitor</p>
             </div>
             <div class="card">
-                <img src="./img/burger.png" alt="">
+                <a href="#" class="card__img"><img src="./img/burger.png" alt=""></a>
                 <h3 class="card__h">Мясная лагуна</h3>
                 <p class="card__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet
                     luctus venenatis, lectus magna fringilla urna, porttitor</p>
             </div>
             <div class="card">
-                <img src="./img/burger.png" alt="">
+                <a href="#" class="card__img"><img src="./img/burger.png" alt=""></a>
                 <h3 class="card__h">Мясная лагуна</h3>
                 <p class="card__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet
                     luctus venenatis, lectus magna fringilla urna, porttitor</p>
             </div>
             <div class="card">
-                <img src="./img/burger.png" alt="">
+                <a href="#" class="card__img"><img src="./img/burger.png" alt=""></a>
                 <h3 class="card__h">Мясная лагуна</h3>
                 <p class="card__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet
                     luctus venenatis, lectus magna fringilla urna, porttitor</p>
             </div>
             <div class="card">
-                <img src="./img/burger.png" alt="">
+                <a href="#" class="card__img"><img src="./img/burger.png" alt=""></a>
                 <h3 class="card__h">Мясная лагуна</h3>
                 <p class="card__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet
                     luctus venenatis, lectus magna fringilla urna, porttitor</p>
             </div>
             <div class="card">
-                <img src="./img/burger.png" alt="">
+                <a href="#" class="card__img"><img src="./img/burger.png" alt=""></a>
                 <h3 class="card__h">Мясная лагуна</h3>
                 <p class="card__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet
                     luctus venenatis, lectus magna fringilla urna, porttitor</p>
             </div>
             <div class="card">
-                <img src="./img/burger.png" alt="">
+                <a href="#" class="card__img"><img src="./img/burger.png" alt=""></a>
                 <h3 class="card__h">Мясная лагуна</h3>
                 <p class="card__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet
                     luctus venenatis, lectus magna fringilla urna, porttitor</p>
