--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>STREET 88</title>
+    <link rel="stylesheet" href="./css/media.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.15.2/css/all.css" />
 </head>
 
 <body>
+    <script src="./script.js"></script>
     <header class="first__header">
         <div class="container">
             <div class="fh__wrap">
@@ -51,14 +53,19 @@
     <section class="banner">
         <div class="container">
             <div class="banner__wrap">
-                <h1 class="banner__h1">Большой гамбургер</h1>
-                <h2 class="banner__h2">говядина</h2>
-                <p class="banner__p">Свежая хрустящая булочка, листики салата, маринованный огурец с луком и небольшая
-                    котлета, сдобренная
-                    майонезом и кетчупом, - таков классический портрет гамбургера, наиболее распространенной «быстрой»
-                    еды в
-                    США, от отравления которой ежедневно на больничных койках оказываются десятки тысяч американцев</p>
-                <div class="banner__links">
+                <div class="banner__desc">
+                    <h1 class="banner__h1">Большой гамбургер</h1>
+                    <h2 class="banner__h2">говядина</h2>
+                    <p class="banner__p">Свежая хрустящая булочка, листики салата, маринованный огурец с луком и
+                        небольшая
+                        котлета, сдобренная
+                        майонезом и кетчупом, - таков классический портрет гамбургера, наиболее распространенной
+                        «быстрой»
+                        еды в
+                        США, от отравления которой ежедневно на больничных койках оказываются десятки тысяч американцев
+                    </p>
+                </div>
+                <div id="banner__links">
                     <a href="#" class="link__price">14500</a>
                     <a href="#" class="link__look">Просмотреть</a>
                 </div>
